--- a/client/src/Components/Pages/CreateListing.css
+++ b/client/src/Components/Pages/CreateListing.css
@@ -65,3 +65,227 @@
                 transition: 0.1s linear;
                 border: 1px solid var(--black);
             }
+
+            .createListingBody0 {
+                min-height: 600px;
+                height: calc(100vh - 100px);
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+                .createListingSubBody0 {
+                    height: 100%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0 300px;
+                    padding-bottom: 100px;
+                }
+
+                    .createListingBodyWelcomeContainer {
+                        height: 80px;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: flex-start;
+                        align-items: center;
+                    }
+
+                        .createListingBodyWelcomeText {
+                            font-size: 32px;
+                            font-weight: bold;
+                        }
+
+                    .createListingBodyStartNewContainer {
+                        height: 120px;
+                        width: 100%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                    }
+
+                        .createListingBodyStartNewTitle {
+                            height: 40%;
+                            width: 100%;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: flex-start;
+                            align-items: center;
+                            font-size: 20px;
+                            font-weight: bold;
+                        }
+
+                        .createListingBodyStartNewOptionContainer {
+                            height: 60%;
+                            width: 100%;
+                            display: flex;
+                            flex-direction: row;
+                            justify-content: space-between;
+                            align-items: center;
+                            border-bottom: 1px solid rgba(160, 160, 160, 0.4);
+                            cursor: pointer;
+                        }
+
+                            .createListingBodyStartNewOptionLeft {
+                                height: 100%;
+                                width: 50%;
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: flex-start;
+                                align-items: center;
+                            }
+
+                                .fa-solid.fa-house.createListingBodyStartNewOptionLeftIcon {
+                                    font-size: 26px;
+                                    margin-bottom: 4px;
+                                    margin-right: 15px;
+                                }
+
+                                .createListingBodyStartNewOptionMiddleText {
+                                    font-size: 16px;
+                                }
+
+                                .fa-solid.fa-chevron-right.createListingBodyStartNewOptionRight {
+                                    font-size: 16px;
+                                }
+
+/* ---------------------------------------------------------------------------------------------- */
+
+    .createListingBody1 {
+        min-height: 600px;
+        height: calc(100vh - 100px);
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+        .createListingSubBody1 {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            padding: 0 80px;
+            padding-bottom: 100px;
+        }
+
+        .createListingBody1Footer {
+            height: 86px;
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: center;
+            position: absolute;
+            bottom: 0;
+            padding: 0 50px;
+            border-top: 6px solid rgba(160, 160, 160, 0.4);
+        }
+
+            .createListingBody1FooterButton {
+                height: 50px;
+                width: 150px;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                background-color: var(--pink);
+                color: white;
+                border-radius: 10px;
+                font-size: 16px;
+                font-weight: bold;
+            }
+
+            .createListingSubBody1Left {
+                height: 100%;
+                width: 50%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                padding-right: 20px;
+            }
+
+                .createListingSubBody1LeftText {
+                    font-size: 50px;
+                    font-weight: bold;
+                }
+
+            .createListingSubBody1Right {
+                height: 100%;
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding-left: 20px;
+            }
+
+                .createListingSubBody1RightListContainer {
+                    min-height: 150px;
+                    height: 150px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    border-bottom: 1px solid rgba(160, 160, 160, 0.4);
+                    margin-bottom: 30px;
+                }
+
+                    .createListingSubBody1RightListLeft {
+                        height: 100%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: flex-start;
+                        margin-right: 20px;
+                    }
+
+                        .createListingSubBody1RightListLeftNum {
+                            font-size: 22px;
+                            font-weight: bold;
+                        }
+
+                    .createListingSubBody1RightListMiddle {
+                        height: 100%;
+                        width: 70%;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: flex-start;
+                        align-items: flex-start;
+                    }
+
+                        .createListingSubBody1RightListMiddleUpperHeader {
+                            font-size: 22px;
+                            font-weight: bold;
+                            margin-bottom: 10px;
+                        }
+
+                        .createListingSubBody1RightListMiddleLowerText {
+                            font-size: 18px;
+                            color: var(--gray);
+                        }
+
+                    .createListingSubBody1RightListRight {
+                        height: 100%;
+                        width: 30%;
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: center;
+                        align-items: flex-start;
+                    }
+
+                        .createListingSubBody1RightPicture {
+                            height: 120px;
+                            width: auto;
+                        }
